fetch data from the api prepare to add them to the DOM

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="main-show">
             <div class="top">
-                <input type="text" placeholder="Enter your city">
+                <input type="text" name="city" placeholder="Enter your city">
                 <h1>Broken Clouds</h1>
                 <h4 id="location">Marrakech</h4>
                 <div id="time">
