change the background depending on the time [morning - night]

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="top">
                 <input type="text" name="city" placeholder="Enter your city">
                 <h1>Broken Clouds</h1>
-                <h4 id="location">Marrakech</h4>
+                <h2 id="location">Marrakech</h2>
                 <div id="time">
                     Friday, 26th Jan 24
                 </div>
@@ -26,7 +26,7 @@
             <div class="bottom">
                 <div class="feelsLike">Feels Like <div class="value"> 17 C</div></div>
                 <div class="humidity">Humidity <div class="value"> 68 %</div></div>
-                <div class="chanceOfRain">Chance of Rain<div class="value"> 8%</div></div>
+                <div class="windDir">Wind direction<div class="value"> 8%</div></div>
                 <div class="windSpeed">Wind Speed <div class="value">11.1 km/h</div></div>
             </div>
         </div>
