check for invalid places (city - country ...)

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div class="main-show">
             <div class="top">
                 <input type="text" name="city" placeholder="Enter your city">
+                <div class="error-msg"></div>
                 <h1>Broken Clouds</h1>
                 <h2 id="location">Marrakech</h2>
                 <div id="time">
@@ -19,7 +20,7 @@
                 </div>
                 <div id="degree">
                     <h2>17 °C</h2>
-                    <button type="submit">Display °F</button>
+                    <button type="submit" id="changeTypeDegree">Display °F</button>
                 </div>
             </div>
             <!-- ================= -->
